# bohr-agent-sdk

./: .gitignore  MANIFEST.in  README.md  README_CN.md  README_EN.md  UI_GUIDE.md  build_ui.py  client.py  config_example.json  install.sh  package.sh  package_with_ui.sh  pyproject.toml  server.py  setup.py  test.ipynb  test.py  test.txt  test_api.py  websocket-server-improvements.md
.claude/: settings,json
config/: config.json
examples/: client.py  cloud_example.py  config_example.json  device_example.py  lab_example.py  server.py
examples/adk/: session_state.py
examples/adk/langgraphAgentDemo/: main.py  my_langgraph_agent.py  plan.py
examples/agent_example/: agent.py
examples/calculation/: client.py  server.py
examples/dpa_agent/: agent.py  config.json
lp/: main_cloud.py  main_device.py
server/: __init__.py  calculation_mcp_server.py  utils.py
server/executor/: __init__.py  base_executor.py  local_executor.py
src/dp/agent/: __init__.py
src/dp/agent/adapter/adk/: utils.py
src/dp/agent/cli/: cli.py
src/dp/agent/cli/templates/: .env.template  main.py.template
src/dp/agent/cloud/: __init__.py  main.py  mcp.py  mqtt.py
src/dp/agent/device/: main.py
src/dp/agent/lab/: main.py  mqtt_device_twin.py  tescan_device.py
src/dp/agent/lab/device/: device.py
src/dp/agent/lab/tescan_element_operator/: requirements.txt
src/dp/agent/server/: __init__.py  calculation_mcp_server.py
src/dp/agent/server/executor/: base_executor.py  dispatcher_executor.py  (+1 more)
tests/: test_cli.py
tests/adk/: test_mcp_tool.py
tests/camel/: test_mcp_client.py
(+141 files in other folders)
